css: added different units

--- a/Browser/DOM-Jira/raw/pocs/units..html
+++ b/Browser/DOM-Jira/raw/pocs/units..html
@@ -6,6 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            margin: 0px;
+        }
+        .one {
+            border: 2px solid red;
+            background-color: lightcoral;
+            height: 100px;
+            width: 100px;
+        }
+        /* screen size */
+        /* screen height -> 100vh */
+        /* screen width -> 100vw */
+        .two {
+            height: 30vh;
+            width: 50vw;
+            border: 2px solid blue;
+            background-color: lightblue;
+        }
+        /*  percentage is always realted to parent  */
+        .children {
+            height: 50%;
+            width: 50%;
+            background-color: lightslategray;
+        }
+        /*  rem relative unit  */
+        /*  1rem -> p size  */
+        .three {
+            height: 10rem;
+            width: 10rem;
+            border: 2px solid green;
+            background-color: lightslategray;
+        }
+    </style>
 </head>
 
 <body>
@@ -14,14 +48,7 @@
         <div class="children"></div>
     </div>
     <div class="three">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio quasi odit fugiat totam sequi
-            asperiores, est fuga nisi harum possimus cumque expedita iste, quo magni. Amet quidem maiores facere autem,
-            harum molestiae asperiores! Repellat soluta quia aliquid quas perferendis. Vero ipsum cupiditate,
-            exercitationem quasi maiores quae. Molestias minima et dolore, obcaecati vitae distinctio quaerat voluptas
-            enim, culpa voluptatum iure totam! Ducimus quae repellat quam assumenda commodi molestias animi quod
-            incidunt pariatur officiis id magnam fugiat eveniet tempore ex dolores beatae tenetur, libero sit excepturi
-            placeat a itaque perspiciatis? Deleniti laudantium quia, delectus iusto facere repellendus dolorum
-            laboriosam doloremque voluptate fuga!</p>
+        <p></p>
     </div>
 </body>
 
